# mail-server-client

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  NewCMakeLists.txt  README.md  Server.cpp  Server.hpp  Thread_ool.cpp  Thread_ool.hpp  Thread_pool.cpp  Thread_pool.hpp  docker-compose.yml  mail_server  main.cpp  patch_openssl.cmake  pch.h  readme.md  test.cpp  vcpkg.json
ClientQtWithQMLS/qtapptestmail/: .gitignore  AddAccountPopup.qml  CMakeLists.txt  CMakeLists_BACKUP_1221.txt  CMakeLists_BASE_1464.txt  CMakeLists_REMOTE_1464.txt  ContentBlankPageQML.qml  ContentPageLetterQML.qml  ContentPageLetterTempQML.qml  DOC.md  DraftItem.qml  DraftsListQML.qml  EmailsListQML.qml  ListItem.qml  LoginForm.qml  Main.qml  MessageSearchModel.cpp  MessageSearchModel.h  NavigationQML.qml  NewMessageQML.qml  Project.qmlproject  Project.qmlproject.qtds  RegisterForm.qml  SettingsQML.qml  SwitchAccountQML.qml  avatarimagegeneration.h  currentuser.cpp  currentuser.h  databasemanager.h  emailfilterproxy.cpp  emailfilterproxy.h  emaillistmodel.cpp  emaillistmodel.h  emailpageproxy.cpp  emailpageproxy.h  hotkeysmanager.h  main.cpp  messagesearchmodel.cpp  resources.qrc  structure.txt
apps/IMAP-SERVER/: CMakeLists.txt  Client.cpp  Server.cpp  Server.hpp  main.cpp
apps/IMAP-SERVER/include/: Server.hpp
apps/IMAP-SERVER/src/: Client.cpp  Server.cpp  main.cpp
apps/aimap_server/: CMakeLists.txt  main.cpp
apps/mail-client/: .clang-format  CMakeLists.txt  Main.qml  main.cpp  resources.qrc
apps/mail-client/.github/: copilot-instructions.md
apps/mail-client/assets/: DarkColorScheme.json  LightColorScheme.json
apps/mail-client/config/: config.json
apps/mail-server/: CMakeLists.txt  Dockerfile  Main.cpp  main.cpp
apps/mail-server-neo/: CMakeLists.txt  Main.cpp  main.cpp
apps/mail-server-neo/src/: common.cpp  server.cpp  session.cpp
apps/mail-server/src/: Common.cpp  Server.cpp  Session.cpp
apps/simple-client/: CMakeLists.txt  README.md  main.cpp
apps/smtp_server/: CMakeLists.txt  main.cpp
client/: .gitignore  CMakeLists.txt  DATABASE_MODEL.md  DOC.md  Main.qml  README.md  SERVER_INTERFACES.md  client.cpp  main.cpp  resources.qrc  vcpkg.json
client/.github/: copilot-instructions.md
client/cmake/: qt.conf.in
client/headers/database/: Database.h  MigrationRunner.h  UserRecord.h  UserRepository.h  cachestore.h
client/headers/hotkeys/: hotkeysmanager.h
client/headers/mail/: EmailCache.h  EmailFilterProxy.h  EmailPageProxy.h  emaillistmodel.h  emailpageproxy.h
client/headers/search/: MessageSearchModel.h
client/headers/users/: AccountListModel.h  UserCache.h  accountlistmodel.h  usercache.h
client/include/: MailBuilder.hpp  SmtpClient.hpp
client/include/mail_client/: MailMessage.hpp  SmtpClient.hpp
client/include/migrations/: 002_mail_delivery.sql
client/models/database/: Database.cpp  DatabaseManager.cpp  MailMessageRepository.cpp  MessageRecipientRepository.cpp  RegistrationHandler.cpp  Statement.cpp  UserRepository.cpp  cachestore.cpp
client/models/mail/: EmailFilterProxy.cpp  EmailPageProxy.cpp  MessageComposer.cpp  emailfilterproxy.cpp  emaillistmodel.cpp  emailpageproxy.cpp
client/models/search/: MessageSearchModel.cpp
client/models/users/: AccountListModel.cpp  CurrentUser.cpp  currentuser.cpp  usercache.cpp
client/qml/: ContentBlankPageQML.qml  ContentPageLetterQML.qml  DraftItem.qml  DraftsListQML.qml  EmailsListQML.qml  ListItem.qml  Main.qml  NavigationQML.qml  NewMessageQML.qml  SettingsQML.qml  SwitchAccountQML.qml
client/screens/content/: ContentBlankPageQML.qml  ContentPageLetterQML.qml
client/screens/email_list/: DraftItem.qml  EmailToolTip.qml  EmailsListQML.qml  ListItem.qml
client/screens/navigation/: NavigationQML.qml
client/src/: MailBuilder.cpp  MailMessage.cpp  SmtpClient.cpp
client/src/gui/: MailClientController.cpp  main.cpp
client/tests/: ClientCoreTests.cpp  Tests.cpp
libs/aimap/: CMakeLists.txt
libs/aimap/src/: Client.cpp  Server.cpp
libs/logger/: CMakeLists.txt
libs/logger/src/: Logger.cpp
libs/mail-server-sdk/: CMakeLists.txt
libs/mail-server-sdk/src/: Client.cpp  MailServerClient.cpp  Server.cpp
libs/mail-storage/: CMakeLists.txt
libs/mail-storage/migrations/: 002_mail_delivery.sql  004_mail_messages_folder_flags.sql  005_mail_messages_folder_archive.sql  006_mail_messages_archived_at.sql
libs/mail-storage/src/: Database.cpp  (+5 more)
libs/smtp-server-sdk/: CMakeLists.txt
libs/smtp_client/: CMakeLists.txt
libs/storage/: CMakeLists.txt
libs/thread_pool/: CMakeLists.txt
server/: CMakeLists.txt  CMakePresets.json  Makefile  server.cpp  vcpkg.json
server/include/: SMTP_Server.hpp
server/src/: main.cpp
server/tests/: ServerTests.cpp  ServicesTests.cpp  SessionTests.cpp  SmtpSessionHandlerTests.cpp  TestDoubles.hpp  ThreadPoolTests.cpp
tests/: CMakeLists.txt  logger_test.cpp  thread_pool_test.cpp
tests-client/: CMakeLists.txt
tests-client/model_tests/: AuthHandlerTests.cpp  DatabaseManagerTests.cpp  MessageComposerTests.cpp  MessageSearchModelTests.cpp  RegistrationHandlerTests.cpp
tests-client/state_tests/: AccountListModelTests.cpp  CurrentUserTests.cpp  EmailCacheTests.cpp  EmailFilterProxyTests.cpp  EmailListModelTests.cpp  UserCacheTests.cpp  main.cpp
tests/imap_server/: imap_server_test.cpp
tests/logger/: LoggerTests.cpp  logger_test.cpp
tests/mail_storage/: DatabaseTests.cpp  MailDeliveryRepositoryTests.cpp  MigrationRunnerTests.cpp  StatementTests.cpp  UserRepositoryTests.cpp
tests/smtp_client/: SmtpClientTests.cpp
tests/smtp_server/: ConfigurationTests.cpp  QueueDispatcherTests.cpp  SessionStorageTests.cpp
tests/smtp_server_sdk/: MailBuilderTests.cpp  SmtpResultTests.cpp
tests/state_tests/: AccountListModelTests.cpp  CurrentUserTests.cpp  EmailCacheTests.cpp  EmailFilterProxyTests.cpp  EmailListModelTests.cpp  UserCacheTests.cpp
tests/storage/: DatabaseTests.cpp  MailDeliveryRepositoryTests.cpp  MigrationRunnerTests.cpp  StatementTests.cpp  UserRepositoryTests.cpp
tests/thread_pool/: ThreadPoolTests.cpp  thread_pool_test.cpp
(+367 files in other folders)
